fix : "개선 CustomQueueUsingArrayList 클래스"
- circular 적용